viewPager + Tablayout + 基本的增删管理

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,12 +38,16 @@
       <activity
         android:name="com.example.viewpagerpractice.viewpager.ViewPagerFragmentNaviActivity"
         android:theme="@style/Theme.ViewPagerPractice">
-
       </activity>
 
-      <activity android:name="com.example.viewpagerpractice.viewpager.ViewPagerFragmentNaviActivity2"
+      <activity
+        android:name="com.example.viewpagerpractice.viewpager.ViewPagerFragmentNaviActivity2"
         android:theme="@style/Theme.ViewPagerPractice">
+      </activity>
 
+      <activity
+        android:name="com.example.viewpagerpractice.viewpager.ViewPagerTabLayoutActivity"
+        android:theme="@style/Theme.ViewPagerPractice">
       </activity>
 
     </application>
